--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
     <header id="top">
       <div class="colorBackground">
         <h1 class="uno">beauty blog!</h1>
-        <h2 class="dos">style, fashion & beauty<3</h2>
+        <h2 class="dos">style, fashion & beauty</h2>
       </div>
 
-      <!-- barra de navegacion desktop  -->
-
       <nav id="barraDesktop">
-        <ul class="letraNormal">
-          <li><a href="./pages/home.html">HOME</a></li>
+        <ul>
+          <li><a href="./index.html">HOME</a></li>
           <li><a href="./pages/blog.html">BLOG</a></li>
           <li><a href="./pages/howto.html">HOW TO</a></li>
           <li><a href="./pages/about.html">ABOUT</a></li>
@@ -50,21 +48,10 @@
       </nav>
     </header>
 
-    <!-- barra de navegacion tablet & mobile  -->
-
-    <nav id="barraTablet">
-      <ul class="letraNormal">
-        <li><a href="./pages/home.html">HOME</a></li>
-        <li><a href="./pages/blog.html">BLOG</a></li>
-        <li><a href="./pages/howto.html">HOW TO</a></li>
-        <li><a href="./pages/about.html">ABOUT</a></li>
-      </ul>
-    </nav>
-
     <main>
-      <div class="imgBack tamanoChiara margenChiara">
+      <div class="imgBack tamanoChiara">
         <img src="./assets/img/chiara.jpeg" alt="" />
-        <h4 id="bienvenidos">¡BIENVENIDOS BEAUTY BLOG LOVERS!❤</h4>
+        <h4>¡BIENVENIDOS BEAUTY BLOG LOVERS!❤</h4>
       </div>
       <h3 data-aos="flip-left" class="letraSubtitulos tres">EL BLOG</h3>
       <h4 class="margen letraNormal cuatro">
@@ -74,28 +61,16 @@
         sobre el maravilloso mundo de las fragancias.
       </h4>
 
-      <!-- img desktop  -->
-
       <section id="imgDesktop" class="imgSection tamanoImg">
-        <img src="./assets/img/haircare.jpeg" alt="haircare" />
-        <img src="./assets/img/skincare.jpeg" alt="skincare" />
-        <img src="./assets/img/makeup.jpeg" alt="makeup" />
-        <img src="./assets/img/frangancia.jpeg" alt="fragancias" />
-        <img src="./assets/img/reviews.jpeg" alt="reviews" />
-      </section>
-
-      <!-- img tablet  -->
-
-      <section id="imgTablet" class="imgSection tamanoImg">
-        <img src="./assets/img/haircare.jpeg" alt="haircare" />
-        <img src="./assets/img/skincare.jpeg" alt="skincare" />
-        <img src="./assets/img/makeup.jpeg" alt="makeup" />
-      </section>
-
-      <!-- img mobile -->
-
-      <section id="imgMobile" class="imgSection tamanoImg">
-        <img src="./assets/img/skincare.jpeg" alt="skincare" />
+        <img class="imgHair" src="./assets/img/haircare.jpeg" alt="haircare" />
+        <img class="imgSkin" src="./assets/img/skincare.jpeg" alt="skincare" />
+        <img class="imgMakeUp" src="./assets/img/makeup.jpeg" alt="makeup" />
+        <img
+          class="imgFragancias"
+          src="./assets/img/frangancia.jpeg"
+          alt="fragancias"
+        />
+        <img class="imgReviews" src="./assets/img/reviews.jpeg" alt="reviews" />
       </section>
 
       <div>
@@ -106,9 +81,7 @@
         </h4>
       </div>
 
-      <!-- tutoriales desktop  -->
-
-      <section id="gridTutorialesDesktop" class="tutoriales">
+      <section class="tutoriales">
         <iframe
           width="560"
           height="315"
@@ -131,43 +104,6 @@
           width="560"
           height="315"
           src="https://www.youtube.com/embed/9xbnRkviMjE"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </section>
-
-      <!-- tutoriales tablet -->
-
-      <section id="gridTutorialesTablet" class="tutoriales">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/4o6xhH9OH84"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/FBUTEZl9kWs"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </section>
-
-      <!-- tutoriales mobile -->
-
-      <section id="gridTutorialesMobile" class="tutoriales">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/4o6xhH9OH84"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
