--- a/pages/polprivacidad.html
+++ b/pages/polprivacidad.html
@@ -11,7 +11,7 @@
     <header>
       <div class="colorBackground">
         <h1 class="uno">beauty blog!</h1>
-        <h2 class="dos">style, fashion & beauty<3</h2>
+        <h2 class="dos">style, fashion & beauty</h2>
       </div>
 
       <nav>
@@ -24,7 +24,7 @@
 
     <main>
       <h3 class="titlePag">Políticas de Privacidad</h3>
-      <p class="letraNormal">
+      <p class="letraNormal textPP">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea illum
         commodi suscipit non facere deleniti autem, facilis fugit possimus amet
         debitis veniam neque ad corporis reprehenderit adipisci odit laudantium.
