--- a/pages/suscripcion.html
+++ b/pages/suscripcion.html
@@ -7,11 +7,12 @@
     <title>suscripcion beauty blog!</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
+
   <body>
     <header>
       <div class="colorBackground">
         <h1 class="uno">beauty blog!</h1>
-        <h2 class="dos">style, fashion & beauty<3</h2>
+        <h2 class="dos">style, fashion & beauty</h2>
       </div>
 
       <nav>
@@ -33,6 +34,19 @@
       <a href="./polprivacidad.html">Acepto la Política de Privacidad</a>
       <p>Suscribirme ya!</p>
     </main>
+
+    <!-- <form action="" method="get">
+      <label for="GET-name">Nombre:</label>
+      <input id="GET-name" type="text" name="name">
+      <input type="submit" value="Save">
+    </form>
+    <form action="" method="get">
+      <label for="GET-name">Mail:</label>
+      <input id="GET-name" type="text" name="name">
+      <input type="submit" value="Save">
+    </form>
+    <a href="./polprivacidad.html">Acepto la Política de Privacidad</a>
+    <p>Suscribirme ya!</p> -->
 
     <footer class="letraFooter colorBackground">
       Todos los derechos reservados - beauty blog!
